--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -25,12 +25,12 @@ Collapsed=0
 
 [Window][Log]
 Pos=10,283
-Size=470,411
+Size=350,32
 Collapsed=1
 
 [Window][Light0]
 Pos=10,310
-Size=303,286
+Size=350,310
 Collapsed=1
 
 [Window][Light1]
@@ -279,8 +279,13 @@ Size=131,226
 Collapsed=0
 
 [Window][Renderer]
-Pos=807,7
-Size=469,426
+Pos=1124,4
+Size=471,249
+Collapsed=0
+
+[Window][Render Stats]
+Pos=1137,260
+Size=459,237
 Collapsed=0
 
 [Table][0xDF3F0A36,3]
